--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "ostream": "cpp",
     "iostream": "cpp",
     "chrono": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "uthash.h": "c"
   }
 }
