--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,9 @@
     "stop_token": "cpp",
     "streambuf": "cpp",
     "thread": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "unistd.h": "c",
+    "stdbool.h": "c",
+    "stdlib.h": "c"
   }
 }
