--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,5 +4,29 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    {
+        "name": "main_debug",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "/root/project/dev/leetcode/leetcode-master/main",
+        "stopAtEntry": false,
+        "cwd": "/root/project/dev/leetcode/leetcode-master",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "gdb",
+        "miDebuggerPath": "/bin/gdb",
+        "setupCommands": [
+            {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            },
+            {
+                "description": "Set Disassembly Flavor to Intel",
+                "text": "-gdb-set disassembly-flavor intel",
+                "ignoreFailures": true
+            }
+        ]
+      },
   ]
 }
