--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
     "unistd.h": "c",
     "stdbool.h": "c",
     "stdlib.h": "c",
-    "assert.h": "c"
+    "assert.h": "c",
+    "types.h": "c"
 }
 }
