--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
     "stdbool.h": "c",
     "stdlib.h": "c",
     "assert.h": "c",
-    "types.h": "c"
+    "types.h": "c",
+    "map": "cpp",
+    "set": "cpp"
 }
 }
